<resources>
    <string name="app_name">Bhalo Bariwala</string>
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to manage your rentals</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="role_title">Continue as</string>
    <string name="role_tenant">Tenant</string>
    <string name="role_owner">House Owner</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_forgot">Forgot password?</string>
    <string name="btn_signup">Create account</string>

    <!-- Tenant Complaints -->
    <string name="tenant_complaints_title">Tenant Complaints</string>
    <string name="complaint_title_hint">Complaint Title</string>
    <string name="complaint_desc_hint">Describe your issue</string>
    <string name="complaint_type_hint">Complaint Type</string>
    <string name="complaint_add">Add Complaint</string>
    <string name="complaint_empty">No complaints found for your building.</string>

    <string-array name="complaint_types">
        <item>electricity</item>
        <item>gas</item>
        <item>water</item>
        <item>security</item>
        <item>maintenance</item>
    </string-array>


</resources>

